# igris_c_sdk_public

./: .gitignore  LICENSE  NOTICE  README.md  pixi.toml
examples/: CMakeLists.txt  build.sh  lowlevel_example.cpp  lowlevel_example.md  sdk_gui_client.cpp  sdk_gui_client.md  service_example.cpp  service_example.md
examples/python/: NAKNAK.ipynb  client.ipynb  client.py
include/igris_sdk/: channel_factory.hpp  igris_c_client.hpp  igris_c_msgs.hpp  publisher.hpp  subscriber.hpp  types.hpp  utils.hpp
lib/cmake/igris_sdk/: igris_sdk-config.cmake  igris_sdk-targets-release.cmake  igris_sdk-targets.cmake
